--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,7 +1,4 @@
 /*-------------------
-    IMPORT PARTIALS
+    IMPORT BOOTSTRAP
 -------------------*/
-@import './partials/variables.scss';
-@import './partials/reset.scss';
-@import './partials/typography.scss';
-@import './partials/layout.scss';
+@import "/node_modules/bootstrap/scss/bootstrap.scss";
